Fix sorting and visibility issues.

--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 
 body {
-    min-width: 960px
+    min-width: 680px
 }
 
 body {
